# patchwork

./: README.md  career_assets.md  demo.js  dummy.py  extractor.py  index.html  new.py  old.py  parse_demo.py  publish.sh  pyproject.toml  semantic_diff.py
.github/workflows/: ci.yml
demo/: api_client_v1.py  api_client_v2.py
patchwork/: __init__.py  cli.py  engine.py  patchwork.tcss  tui.py
patchwork_diff.egg-info/: PKG-INFO  SOURCES.txt
patchwork_semantic_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
patchwork_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_engine.py
